[package]
name = "rivets-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
rivets = { git = "https://github.com/factorio-rivets/rivets-rs" }
lazy-regex = "3.2.0"
pdb = "0.8.0"
anyhow = "1.0.86"
indicatif = "0.17.8"
clap = { version = "4.5", features = ["derive"] }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
trivial_regex = "allow"
